# arxivwatch

./: .env.example  CLAUDE.md  Makefile  README.md  notified_papers.json  prompt.txt  pyproject.toml  renovate.json
.github/workflows/: ci.yml  watch.yml
src/arxivwatch/: __init__.py  config.py  main.py  notifier.py  pdf.py  rss.py  storage.py  summarizer.py
tests/: __init__.py  test_config.py  test_notifier.py  test_pdf.py  test_rss.py  test_storage.py  test_summarizer.py
